--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -5,6 +5,65 @@
     <meta charset="UTF-8">
     <title>Dashboard</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles.css') }}">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0/firebase.js"></script>
+    <script>
+        var config = {
+            apiKey: "",
+            authDomain: "fahima-504-2023.firebaseapp.com",
+        };
+        firebase.initializeApp(config);
+    </script>
+    <script>
+        $(document).ready(function(){
+          $('#logout-google-btn').click(function(){
+            firebase.auth().signOut().then(() => {
+                document.location.href="/";
+            }).catch((error) => {
+            // An error happened.
+            });
+
+          });
+        });
+    </script>
+    <script type="text/javascript">
+        initApp = function() {
+          firebase.auth().onAuthStateChanged(function(user) {
+            if (user) {
+              // User is signed in.
+              var displayName = user.displayName;
+              var email = user.email;
+              var emailVerified = user.emailVerified;
+              var photoURL = user.photoURL;
+              var uid = user.uid;
+              var phoneNumber = user.phoneNumber;
+              var providerData = user.providerData;
+              user.getIdToken().then(function(accessToken) {
+                document.getElementById('account-details').textContent = JSON.stringify({
+                  displayName: displayName,
+                  email: email,
+                  emailVerified: emailVerified,
+                  phoneNumber: phoneNumber,
+                  photoURL: photoURL,
+                  uid: uid,
+                  accessToken: accessToken,
+                  providerData: providerData
+                }, null, '  ');
+              });
+            } else {
+              // User is signed out.
+              document.getElementById('account-details').textContent = 'null';
+            }
+          }, function(error) {
+            console.log(error);
+          });
+        };
+  
+        window.addEventListener('load', function() {
+          initApp()
+        });
+      </script>  
+      
 </head>
 
 <body>
@@ -12,10 +71,31 @@
     <div>
         <a href="/logout" class="logout-btn" style="text-decoration:none;">
             <div class="btn-text">
-                Logout
+                Logout OAuth 2.0 and Google
             </div>
         </a>
     </div>
+    <div>
+        <a href="" id="logout-google-btn" class="logout-btn" style="text-decoration:none;">
+            <div class="btn-text">
+                Logout with google identity platfrom
+            </div>
+        </a>
+    </div>
+    <h1>Google Identity Platform Auth</h1>
+    <pre id="account-details"></pre>
+    <h1> Flask, Oauth2.0, Google </h1>
+    {% if user %}
+    <h3> Welcome {{ user.name }} </h3>
+    <h2> User Details</h2>
+    <div>
+        <p> Name: {{ user.name }} </p>
+        <p> Email: {{ user.email }} </p>
+        <p> Profile Picture: <img src="{{ user.picture }}" alt="Profile Picture" style="width:50px;height:50px;"> </p>
+    </div>
+    {% else %}
+    <p>null</p>
+    {% endif %}
 </body>
 
 </html>
