--- a/Templates/index.html
+++ b/Templates/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.css" />
     <script>
     var config = {
-        apiKey: "AIzaSyD1OZ_q3qJMPTkSD_Eg4c0iau6z9dR0FRM",
+        apiKey: "",
         authDomain: "fahima-504-2023.firebaseapp.com",
     };
     firebase.initializeApp(config);
@@ -28,41 +28,6 @@
         // The start method will wait until the DOM is loaded.
         ui.start('#firebaseui-auth-container', uiConfig);
     </script>
-        <!-- <script type="text/javascript">
-            initApp = function() {
-              firebase.auth().onAuthStateChanged(function(user) {
-                if (user) {
-                  // User is signed in.
-                  var displayName = user.displayName;
-                  var email = user.email;
-                  var emailVerified = user.emailVerified;
-                  var photoURL = user.photoURL;
-                  var uid = user.uid;
-                  var phoneNumber = user.phoneNumber;
-                  var providerData = user.providerData;
-                  user.getIdToken().then(function(accessToken) {
-                    document.getElementById('sign-in-status').textContent = 'Signed in';
-                    document.getElementById('sign-in').textContent = 'Sign out';
-                    document.getElementById('account-details').textContent = JSON.stringify({
-                      displayName: displayName,
-                      email: email,
-                    }, null, '  ');
-                  });
-                } else {
-                  // User is signed out.
-                  document.getElementById('sign-in-status').textContent = 'Signed out';
-                  document.getElementById('sign-in').textContent = 'Sign in';
-                  document.getElementById('account-details').textContent = 'null';
-                }
-              }, function(error) {
-                console.log(error);
-              });
-            }; -->
-      
-            <!-- window.addEventListener('load', function() {
-              initApp()
-            });
-        </script> -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -79,16 +44,10 @@
             <img id="google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png"
         alt="Google"
         style="width:50px;height:50px;">
+        </a>
         <div class="btn-text">
             Login with Google
         </div>
     </div>
-    <!-- <div> -->
-        <!-- <h1>Welcome to My Awesome App</h1>
-        <div id="sign-in-status"></div>
-        <div id="sign-in"></div>
-        <pre id="account-details"></pre>
-        </a> 
-    </div> -->
 </body>
 </html>
